| Summary: | ASTERISK-27614: res_pjsip_session: SDP origin does not use resolved address | ||
| Reporter: | John M. (ast2301) | Labels: | pjsip |
| Date Opened: | 2018-01-23 11:35:31.000-0600 | Date Closed: | 2018-04-11 14:05:47 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_session |
| Versions: | 13.19.0 15.2.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The external media address is now resolved to an IP address. This value is placed in the c= line but not in the o= line. They should match.
Link to the first change: https://gerrit.asterisk.org/#/c/6068/ | ||
| Comments: | By: Chris Savinovich (csavinovich) 2018-04-11 12:37:46.198-0500 RFC states the o= line should show FQDN if and when available and not just IP address as reporter requests. Nevertheless, the decision was made 4/11/18 to stick to writing the numerical IP address, as a way to help avoid potential problems. By: Friendly Automation (friendly-automation) 2018-04-11 14:05:48.610-0500 Change 8760 merged by Jenkins2: res_pjsip_session: Rewrite o= with external_media_address. [https://gerrit.asterisk.org/8760|https://gerrit.asterisk.org/8760] By: Friendly Automation (friendly-automation) 2018-04-11 14:16:05.320-0500 Change 8759 merged by Jenkins2: res_pjsip_session: Rewrite o= with external_media_address. [https://gerrit.asterisk.org/8759|https://gerrit.asterisk.org/8759] By: Friendly Automation (friendly-automation) 2018-04-11 14:21:21.446-0500 Change 8761 merged by George Joseph: res_pjsip_session: Rewrite o= with external_media_address. [https://gerrit.asterisk.org/8761|https://gerrit.asterisk.org/8761] | ||